utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/ModuleConfigurationOrder.ide
package valid

typedef module ModuleConfigurationOrder {
    configuration config: ModuleConfigurationOrderConfiguration {

    }
}
