utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ModuleConfigurationOrder.ide
package invalid

typedef module ModuleConfigurationOrder {
    configuration config: ModuleConfigurationOrderConfiguration<0> {

    }
}
